added second and third blog

--- a/index.html
+++ b/index.html
@@ -3,9 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Github projects</title>
 </head>
 <body>
-    
+    <div class="div">
+        <h3>first blog</h3>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deserunt tempore provident maxime ad laboriosam numquam modi natus asperiores saepe hic, atque vel exercitationem ratione cupiditate, rem tenetur error impedit ex.</p>
+    </div>
+    <div class="div">
+        <h3>first blog</h3>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deserunt tempore provident maxime ad laboriosam numquam modi natus asperiores saepe hic, atque vel exercitationem ratione cupiditate, rem tenetur error impedit ex.</p>
+    </div>
+    <div class="div">
+        <h3>Third blog</h3>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deserunt tempore provident maxime ad laboriosam numquam modi natus asperiores saepe hic, atque vel exercitationem ratione cupiditate, rem tenetur error impedit ex.</p>
+    </div>
 </body>
 </html>
