--- a/index.html
+++ b/index.html
@@ -19,5 +19,16 @@
         <h3>Third blog</h3>
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deserunt tempore provident maxime ad laboriosam numquam modi natus asperiores saepe hic, atque vel exercitationem ratione cupiditate, rem tenetur error impedit ex.</p>
     </div>
+     <div>
+        <h3>List Item
+
+        </h3>
+        <ul>
+            <li>Web Devlopment</li> 
+            <li>App Devlopment</li>
+            <li> Grapiches Design</li>
+        </ul>
+
+     </div>
 </body>
 </html>
