--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
      <section class="part_section">
        <div class="party">
           <h2>welcome to midnight party</h2>
-          <p></p>
+          <p>Our "Welcome to Midnight" party promises an extraodinary night filled with excitement, dazzling lights, and a vibrant atmosphere. Join us for a memorable celebration that marks the tranition into a new chapter, surrounded by great company and unforgettable experiences.</p>
           <button class="join_btn">Join Now</button>
        </div>
         <div class="join">
