--- a/index.html
+++ b/index.html
@@ -79,6 +79,29 @@
           <h4>what is functional</h4>
           <h2><span class="holiday">holiday</span> sale 50%</h2>
           <p>Don't miss out on the holiday sale extravaganze, where discounts abound and festive deals await. It's the perfect time to snag great gifts or treat yourself to some well-deserved indulgence.</p>
+
+           <div class="sale_img">
+             <div class="sale_img_wraped">
+              <div class="sale_img_one">
+                <img src="images/Group 75.png">
+              </div>
+             </div>
+               <div class="sale_img_wrapped_two">
+                <div class="sale_img_two">
+                  <img src="images/Rectangle 1.png">
+              </div>
+               </div>
+
+
+           </div>
+           <div class="img_line">
+               <div class="img_line_one">
+                 <img src="images/Rectangle 2.png">
+               </div>
+               <div class="img_line_two">
+                 <img src="images/Group 44.png">
+               </div>
+           </div>
         </section>
       <!--sale section end-->
        <!-- item section start-->
