--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                <div class="img_line_one">
                  <img src="images/Rectangle 2.png">
                </div>
-               <div class="img_line_two">
+               <div class="img_line_two">git add README.md
                  <img src="images/Group 44.png">
                </div>
            </div>
